adding the last round of updates. not sure how old some of these are

--- a/css/fields.css
+++ b/css/fields.css
@@ -15,7 +15,7 @@
 }
 
 /* Imagefields */
-.field-type-image {
+.field-name-field-image {
 	background: transparent url(../images/bg-picture.png) no-repeat 0 0;
 	margin: 0 -10px 0 -8px;
 	padding: 5px 12px 0;
