--- a/css/articles.css
+++ b/css/articles.css
@@ -77,7 +77,21 @@
 .article-promoted {}
 
 /* Status. */
-.article-unpublished {}
+.article-unpublished {
+  opacity: .6;
+  border: 3px solid #ff0000;
+}
+.article-unpublished .unpublished {
+  background: #ff0000;
+  padding: 10px;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  text-shadow: 0 1px 3px #000;
+  font-size: 18px;
+  box-shadow: inset 0 0 10px #000;
+  border-bottom: 3px solid #ff0000;
+}
 
 /* Theme the teaser. */
 .article-teaser {}
@@ -151,9 +165,10 @@ div.more a:hover {
 .jcarousel-clip-horizontal .jcarousel-item:hover .screenshot-title {
 	display: block;
 }
-.twitter-share-button {
+.twitter-share-button, #g-plus {
 	float: right;
 	margin-left: 10px;
+	width: auto;
 }
 .fb_iframe_widget {
 	margin-left: 80px;
